@@ -720,7 +720,7 @@ enum {
 	TAGACT_MAP, TAGACT_AREA, TAGACT_SCRIPT, TAGACT_NOSCRIPT, TAGACT_EMBED,
 	TAGACT_OBJ, TAGACT_DATAL, TAGACT_B, TAGACT_CODE, TAGACT_DEL, TAGACT_EM,
 	TAGACT_I, TAGACT_INS, TAGACT_S, TAGACT_STRONG, TAGACT_U,
-	TAGACT_DET, TAGACT_UNKNOWN,
+	TAGACT_DET, TAGACT_SUMMARY, TAGACT_UNKNOWN,
 };
 
 // htmlTag.itype, The order of these is important!
