@@ -3214,6 +3214,8 @@ int frameExpandLine(int ln, Tag *t)
 
 	if (t->action == TAGACT_DET) {
 		t->contracted = false;
+		if(t->jslink)
+			set_property_bool_t(t, "open", true);
 		return 0;
 	}
 
@@ -3389,6 +3391,8 @@ static int frameContractLine(int ln)
 	if (!t)
 		return 1;
 	t->contracted = true;
+	if(t->action == TAGACT_DET && t->jslink)
+		set_property_bool_t(t, "open", false);
 	return 0;
 }
 
